# 3DProject

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/: copilot-instructions.md
src/: main.cpp
src/app/: Application.cpp  Application.h
src/gfx/: Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h
src/graphics/: Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h
src/platform/: GlfwWindow.cpp  GlfwWindow.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h
